@@ -240,7 +240,7 @@ option ::= /* empty */
 
 volume ::= <type> <mountpoint> <size> <filesystem> <mount_options> <fs_options>
 .br
-           | vg <name> <size>
+           | vg <name> <size> <fs_options>
 .br
            /* lvm vg */
 .br
@@ -318,11 +318,11 @@ filesystem ::= -
 .br
 
 
-fs_options ::= (createopts=".*"|tuneopts=".*")*
+fs_options ::= (createopts=".*"|tuneopts=".*"|(pv|vg|lv|md)createopts=".*")*
 .br
                /* options to append to mkfs.xxx and to the filesystem-specific
 .br
-                * tuning tool */
+                * tuning tool, pvcreate, vgcreate, lvcreate or mdadm */
 .br
 .SH MIGRATION FROM SETUP_HARDDISKS
 The major differences to the prior configuration syntax are:
