@@ -77,8 +77,13 @@ fai (3.2.18) UNRELEASED; urgency=low
   * bin/setup-storage, setup-storage/Volumes.pm: When propagating preserve
     markers also check whether the to-be-preserved volume is defined at all
     (closes: #521153)
+  * setup-storage/Parser.pm, setup-storage/Commands.pm: Added support for
+    optional (pv|vg|lv|md)createopts
+  * man/setup-storage.8: Documented these new options
+  * Moved parsing of createopts,tuneopts to Parser.pm for simpler code and
+    better syntax checking (closes: #521172)
 
- -- Thomas Lange <lange@debian.org>  Thu, 09 Apr 2009 17:02:27 +0200
+ -- Thomas Lange <lange@debian.org>  Thu, 09 Apr 2009 20:02:43 +0200
 
  (3.2.17) unstable; urgency=medium
 
